# KungFoo

./: .gitignore  .travis.yml  Licences.txt  README.md  distributeAssets.bat  distributeAssets.sh
src/: CMakeLists.txt  CMake_Defaults.txt  CMake_Externals.txt
src/DescentEngine/: CMakeLists.txt
src/DescentEngine/src/: Cpp11.h  Engines.cpp  Engines.h  GameLoop.cpp  GameLoop.h  InterfaceInitData.h  JavaInterface.h  Log.cpp  Log.h  OpenGLInclude.h  PropertyTreeSupport.h  RandomEngine.h  Rectangle.h  RenderEngine.cpp  RenderEngine.h  SDL_include.h  Signals.h  Texture.cpp  Texture.h  TextureRef.h  TextureSet.h  TickAction.h  Timing.h  Util.h  VectorTypes.cpp  VectorTypes.h  XmlTools.h
src/DescentEngine/src/Android_OpenGL/: AndroidOpenGLESInterface.cpp  AndroidOpenGLESInterface.h  AndroidOpenGLES_State.h
src/DescentEngine/src/AnimationEngine/: AnimationEngine.cpp  AnimationEngine.h  EntityAnimation.cpp  EntityAnimation.h  ParticleAnimation.cpp  ParticleAnimation.h  TextAnimation.cpp  TextAnimation.h
src/DescentEngine/src/CinematicEngine/: CinematicAspect.h  CinematicEngine.cpp  CinematicEngine.h
src/DescentEngine/src/Common_OpenGL/: GLSupport.h  OpenGL_ES_Render.cpp  OpenGL_ES_Render.h
src/DescentEngine/src/DataTypes/: RingBuffer.h  StaticList.h  StaticVector.h
src/DescentEngine/src/EntityEngine/: Entity.cpp  Entity.h  EntityEngine.cpp  EntityEngine.h  EntityFactory.h  EntityList.h  EntityTemplate.cpp  EntityTemplate.h  MoveAccessClass.h  MultiVisualEntity.cpp  MultiVisualEntity.h  SingleVisualEntity.h  TimeSliceAction.h
src/DescentEngine/src/Exceptions/: BaseException.h
src/DescentEngine/src/Input/: AndroidInput.cpp  AndroidInput.h  DelayedInput.h  InputContainer.cpp  InputContainer.h  InputSystem.h  InputSystemBase.h  MultiplexedInput.h  NullInput.h  SDLInput.cpp  SDLInput.h
src/DescentEngine/src/Pathfinding/: Node.h  NodeList.h  Pathfinding.cpp  Pathfinding.h
src/DescentEngine/src/Performance/: BranchPredict.h  SectionTimer.cpp  SectionTimer.h
src/DescentEngine/src/Physics/: CollisionGroups.cpp  CollisionGroups.h  CollisionType.h  PhysicsEngine.h  PhysicsEngineBox2D.cpp  PhysicsEngineBox2D.h
src/DescentEngine/src/ResourceEngine/: ResourceEngine.cpp  ResourceEngine.h  ResourceEngineAndroid.cpp  ResourceEngineAndroid.h  ResourceEngineSDL.cpp  ResourceEngineSDL.h
src/DescentEngine/src/SDL_OpenGL/: SDLOpenGLInterface.cpp  SDLOpenGLInterface.h  SDLOpenGL_State.h
src/DescentEngine/src/ScriptEngine/: ScriptEngine.cpp  ScriptEngine.h
src/DescentEngine/src/SoundEngine/: PlayHandle.h  SoundEngine.h  SoundEngineAbstract.h  SoundEngineAndroid.h  SoundEngineSDL.cpp  SoundEngineSDL.h  SoundPtr.h
src/DescentEngine/src/StateEngine/: Aspect.h  StateBase.h  StateChangeInfo.h  StateEngine.h  StateTransitions.h
src/DescentEngine/src/Threading/: PortableMutex.h  PortableThread.h
src/DescentEngine/src/Visuals/: DeferredVisualUpdate.h  LayerPriority.h  LightFactory.h  LightVisual.h  LightVisualList.h  ParticleSystemVisual.cpp  ParticleSystemVisual.h  ParticleSystemVisualList.h  ScreenTransform.h  SpriteVisual.cpp  SpriteVisual.h  SpriteVisualList.h  TextSupport.h  TextVisual.cpp  TextVisual.h  TextVisualList.h  VisualBase.h  VisualSupport.h
src/DescentGame/: CMakeLists.txt
src/DescentGame/src/: CommandLineOptions.h  Main.cpp  WinMain.cpp
src/DescentLogic/: CMakeLists.txt
src/DescentLogic/src/: DescentFramework.h  LevelFactory.cpp  LevelFactory.h
src/DescentLogic/src/Cinematics/: IntroCinematic.h
src/DescentLogic/src/Common/: ChangeToGameInfo.h  GameToMenuInfo.h
src/DescentLogic/src/Common/Aspects/: DebugFunctionAspect.cpp  DebugFunctionAspect.h  QuitAspect.cpp  QuitAspect.h  ScriptAspect.h
src/DescentLogic/src/Config/: EnemyBehaviour.cpp  EnemyBehaviour.h  GameMovement.cpp  GameMovement.h  GameRules.cpp  GameRules.h  PlayerMovement.cpp  PlayerMovement.h  VibratePatterns.h
src/DescentLogic/src/Entities/: BloodEntity.h  CollisionEntity.h  EnemyEntity.h  FighterEntity.cpp  FighterEntity.h  FloorEntity.h  GameCollisionGroups.h  GameTemplates.cpp  GameTemplates.h  PlayerEntity.h  TextureIds.h  WallCollisionEntity.h  WallEntity.h
src/DescentLogic/src/Exceptions/: LevelParsingException.h
src/DescentLogic/src/Game/: GameState.cpp  GameState.h  PlayerData.h
src/DescentLogic/src/Game/Aspects/: AttackAspect.cpp  AttackAspect.h  ComboDetectionAspect.cpp  ComboDetectionAspect.h  DebugVisualCollisionsAspect.h  DieAspect.cpp  DieAspect.h  DisplayEventsAspect.cpp  DisplayEventsAspect.h  EnemyAIAspect.cpp  EnemyAIAspect.h  ExecuteMoveIntentsAspect.cpp  ExecuteMoveIntentsAspect.h  ForwardScrollingAspect.cpp  ForwardScrollingAspect.h  FreeScrollingAspect.cpp  FreeScrollingAspect.h  InputTranslationAspect.cpp  InputTranslationAspect.h  LevelEditorAspect.cpp  LevelEditorAspect.h  MovePlayerAspect.cpp  MovePlayerAspect.h  RemoveEntitiesAspect.cpp  RemoveEntitiesAspect.h  ScoringAspect.cpp  ScoringAspect.h  SpecialMoveDetectionAspect.cpp  SpecialMoveDetectionAspect.h  StartGameAspect.cpp  StartGameAspect.h  StatusAspect.cpp  StatusAspect.h
src/DescentLogic/src/Game/Util/: SafePlacement.h
src/DescentLogic/src/Intro/: IntroState.h
src/DescentLogic/src/Menu/: MenuState.cpp  MenuState.h
src/DescentLogic/src/Tools/: DelayedInput.cpp  DelayedInput.h
src/DescentTest/: CMakeLists.txt
src/DescentTest/src/: test_main.cc
src/DescentTest/src/DescentEngine/: Box2DTest.cpp  ConcurrentStackTest.cpp  EntityEngineTest.hpp  PathfindingTest.h  PhysicsTest.cpp  RectangleTest.hpp  RingBufferTest.hpp  SignalsTest.hpp  SpecialMoveDetectionAspectTest.hpp  StateEngineTest.hpp  StateTransitionTest.hpp  StaticVectorTest.cpp  TimeSliceActionTest.cpp  UniqListTest.cpp  VectorTest.hpp
src/DescentTest/src/DescentLogic/: FightEntityTest.hpp  LevelLoaderTest.hpp
src/EngineBench/: CMakeLists.txt
src/EngineBench/src/: FakeGL.cpp  FakeGL.h  RenderEngineBench.cpp  RenderEngineBenchmark.cpp  RenderEngineBenckmark.h
src/LevelEditor/: CMakeLists.txt
src/LevelEditor/src/: LevelEditorMain.cpp
src/Tools/: drawGlyphs.py  drawGlyphsAll.py  drawGlyphsCairo.py  runtime_plot.ipynb
(+83 files in other folders)
